# astro-bot

./: .gitignore  README.md  cloudbuild.cloud-run.yaml  deploy.sh  docker-compose.yaml  dockerfile  error_file.json  main.py  pyproject.toml  sub-unsubs.json  sub.json  subscriptions.json  unsub.json
astrogpt/: start_bot.py
astrogpt/bot_utils/: bot_chat.py  generate_daily_forecast.py  language.py  reply_chat.py  send_cancel_message.py  send_command_explanation_message.py  send_critical_error.py  send_daily_forecast.py  send_reply_to_user.py  send_thinking_message.py  send_unexpected_input_reply.py  send_welcome_message.py
astrogpt/db_utils/: add_advice.py  add_daily_forecast.py  add_joke.py  add_message.py  add_warning.py  create_user.py  get_forecast_for_today.py  get_jokes.py  get_last_advices.py  get_last_daily_forecasts.py  get_last_messages.py  get_last_warnings.py  get_messages.py  get_user.py  get_users_for_forecast.py  remove_user.py  update_user.py
astrogpt/handler/: cancel_handler.py  handle_birthday_input.py  handle_user_language_input.py  llm_menu.py  start_handler.py  stop_handler.py  subscribe_handler.py  text_handler.py  unsubscribe_handler.py
astrogpt/llm/: chains.py  llm_models.py  parsers.py  prompt.py  prompts.py
astrogpt/logger/: logger.py
astrogpt/models/: __init__.py  advice.py  daily_forecast.py  engine.py  joke.py  messages.py  user.py  warning.py
migrations/: env.py
migrations/versions/: 1b11d7c10f00_add_more_info_about_user.py  413a23091c12_add_new_warning_to_detect_text_.py  5c7782b1cb14_add_language_to_db.py  68780b269846_add_daily_forecast_table.py  7d3954d93340_create_a_baseline_migrations.py  (+7 more)
src/: config.py  start_bot.py
(+57 files in other folders)
