[tool.poetry]
name = "astro-gpt"
version = "0.1.0"
description = ""
authors = ["airtucha <airtucha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
python-telegram-bot = "^21.0.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"
types-psycopg2 = "^2.9.21.20240417"
fastapi = "^0.111.0"
langchain = "^0.2.0"
langchain-core = "^0.2.0"
langchain-community = "^0.2.0"
langchain-openai = "^0.1.7"
mypy = "1.9.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
